// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en Product image debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    product card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`pruebas en Product image debe de mostrar el componente correctamente  1`] = `
<div
  className="productCard undefined"
>
  <h1>
    product card
  </h1>
</div>
`;
